WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98686
editing/pasteboard/data-transfer-item is failing after
r130643
https://bugs.webkit.org/show_bug.cgi?id=98686
Summary
editing/pasteboard/data-transfer-item is failing after r130643
Dirk Pranke
Reported
2012-10-08 13:44:18 PDT
It looks like maybe we just need a new baseline now that kling landed the change in
r130588
to change to an ordered collection (maybe the order has changed for the better)? Ryosuke, can you confirm that the change is okay, or let us know if you think there's still a bug here?
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=editing%2Fpasteboard%2Fdata-transfer-items.html
https://bugs.webkit.org/show_bug.cgi?id=98406
http://trac.webkit.org/changeset/130643
http://trac.webkit.org/changeset/130588
http://webkit.org/b/98547
Attachments
Speculative fix
(1.95 KB, patch)
2012-10-08 14:36 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-10-08 14:32:45 PDT
I think this is fine to rebaseline. The order of clipboard types isn't defined. dcheng can confirm.
Andreas Kling
Comment 2
2012-10-08 14:36:07 PDT
Created
attachment 167613
[details]
Speculative fix
Ryosuke Niwa
Comment 3
2012-10-08 14:48:27 PDT
(In reply to
comment #1
)
> I think this is fine to rebaseline. The order of clipboard types isn't defined. dcheng can confirm.
I think it needs to preserve the order if it's created by the author script.
Tony Chang
Comment 4
2012-10-08 14:55:57 PDT
(In reply to
comment #3
)
> (In reply to
comment #1
) > > I think this is fine to rebaseline. The order of clipboard types isn't defined. dcheng can confirm. > > I think it needs to preserve the order if it's created by the author script.
You're right, I think the intent is that it behaves like a list.
WebKit Review Bot
Comment 5
2012-10-08 18:44:49 PDT
Comment on
attachment 167613
[details]
Speculative fix Clearing flags on attachment: 167613 Committed
r130712
: <
http://trac.webkit.org/changeset/130712
>
WebKit Review Bot
Comment 6
2012-10-08 18:44:53 PDT
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 7
2013-01-31 11:43:18 PST
Test result updated in
http://trac.webkit.org/changeset/141449
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug