REGRESSION(r130643): editing/pasteboard/data-transfer-item is failing on chromium. <http://webkit.org/b/98686>

Reviewed by Tony Chang.

Change ChromiumDataObject::createFromPasteboard() to use a ListHashSet instead of a HashSet so that
item order is preserved.

* platform/chromium/ChromiumDataObject.cpp:
(WebCore::ChromiumDataObject::createFromPasteboard):


Canonical link: https://commits.webkit.org/116698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130712 268f45cc-cd09-0410-ab3c-d52691b4dbfc